# G-CLI

./: .gitignore  CONTRIBUTING.md  Jenkinsfile  LICENSE  MoveInstallers.bat  README.md  Release Checklist.txt  justfile  run_integration_tests.ps1
.github/workflows/: ci.yml  mdbook.yml  rust.yml
C Sharp Source/LabVIEW CLI/: G CLI.sln  G_CLI.csproj  LabVIEW CLI.csproj  LabVIEW CLI.sln  LabVIEW CLI_TemporaryKey.pfx  LvLauncher.cs  Program.cs  cliOptions.cs  lvComms.cs  lvVersions.cs  output.cs  portRegistration.cs
C Sharp Source/LabVIEW CLI Setup/: LabVIEW CLI Setup.isl  LabVIEW CLI Setup.isproj
C Sharp Source/LabVIEW CLI WIX Setup/: G_CLI_WIX_Setup.wixproj  LabVIEW CLI WIX Setup.wax  LabVIEW CLI WIX Setup.wixproj  License.rtf  Product.wxs  labview-cli.bat
C Sharp Source/LabVIEWCLI_Unit_tests/: ExitCodeUnitTests.cs  GCLI_Unit_tests.csproj  LVLauncherTests.cs  LabVIEWCLI_Unit_tests.csproj  LvLauncher Tests.cs  LvVersion Unit Tests.cs  Port Registration Unit Tests.cs  lvComms Unit Tests.cs
Integration Tests/: CLI Integration Tests.lvproj  Check Unicode Response HÜll°.vi  Check Unicode Response.vi  Echo CWD.vi  Echo Parameters.vi  Generate Large Error.vi  Generate Large Output.vi  Integrations.lvlib  Quit With Parameter Code.vi  Run Integration Tests.bat  Tests.lvlibp  run_integration_tests.bat  run_integration_tests.ps1
Integration Tests/exes/: LargeOutput.ini
LabVIEW Source/: CLI Demo.vi  G CLI.lvproj  G CLI.vipb  LabVIEW CLI.lvproj  LabVIEW CLI.vipb
LabVIEW Source/Argument Parser/: Option Parser.lvlib
LabVIEW Source/CLI Class/: CLI.lvclass  Chalk.vi  Chalk_Options.ctl  Check If Multiple LV Instances Allowed.vi  Escape VI Name.vi  Exit With Error Cluster Code.vi  Exit with Code.vi  Generate Service Name.vi  Get Service Name.vi  Output.ctl  Path From Parameter.vi  Read Arguments.vi  Read Message.vi  Read Startup Messages.vi  Start CLI Interface.vi  Write Line.vi  Write Message.vi  Write String.vi
LabVIEW Source/Dependencies/: TCP_NoDelay_Linux.vi  TCP_NoDelay_Windows.vi
LabVIEW Source/Examples/: Options Parser Example.vi
LabVIEW Source/Help/: G CLI Getting Started.vi
LabVIEW Source/Installation Support/: Detect Platform Compatiblity.vi  G_CLI_x64.msi  G_CLI_x86.msi  LabVIEW_CLI.msi  LabVIEW_CLI_x64.msi  LabVIEW_CLI_x86.msi  Post-Install Custom Action.vi  Pre-Uninstall Custom Action.vi  WINAPI Is 64 Bit OS.vi
LabVIEW Source/Tools/: ClearCache.vi  Echo.vi  (+1 more)
docs/: release-notes.md
integration-tests/: CLI Integration Tests.lvproj  Check Unicode Response HÜll°.vi  Echo CWD.vi  Generate Large Error.vi  cwd.vi
rust-proxy/: Cargo.toml  deny.toml
rust-proxy/.devcontainer/: centos.Dockerfile  devcontainer.json
rust-proxy/src/: action_loop.rs  cli.rs  comms.rs  comms_loop.rs  main.rs  os_string_support.rs  signal_loop.rs
rust-proxy/src/labview/: error.rs  install_detection_linux.rs  install_detection_win.rs  installs.rs  mod.rs  port_discovery.rs  process.rs  vi_location.rs
rust-proxy/tests/: basic_io.rs  built_exes.rs  common.rs
rust-proxy/wix/: main.wxs
(+83 files in other folders)
