[package]
name = "g-cli"
version = "3.0.1"
authors = ["James McNally <james@wiresmithtech.com>", "G-CLI Contributors"]
edition = "2021"
license = "BSD-2-Clause"
homepage = "https://github.com/JamesMc86/G-CLI"
readme = "../README.md"
description = "Proxy application which will launch and communicate with LabVIEW VIs which use the client library."
keywords = ["LabVIEW"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.24"
log = "0.4"
simplelog = "0.12"
time = { version = "^0.3.11", features = ["macros"]}
thiserror = "1.0"
clap = "3.0"
# minimal library - remove the features we aren't using.
ureq = { version = "2.*", default-features = false }
regex = "1.5"
lazy_static = "1.4"
eyre = "0.6"
ctrlc = "3.2"


[target.'cfg(windows)'.dependencies] 
winreg = "0.10"
windows = { version = "0.32", features = ["Win32_Foundation", "Win32_System_Console","Win32_System_Threading", "Win32_Security"]}
