[package]
name = "g-cli"
version = "3.0.1"
authors = ["James McNally <james@wiresmithtech.com>", "G-CLI Contributors"]
edition = "2021"
license = "BSD-2-Clause"
license-file = "../LICENSE"
homepage = "https://github.com/JamesMc86/G-CLI"
readme = "../README.md"
description = "Proxy application which will launch and communicate with LabVIEW VIs which use the client library."
keywords = ["LabVIEW"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.29"
log = "0.4"
simplelog = "0.12"cd 
time = { version = "^0.3.11", features = ["macros"]}
thiserror = "1.0"
clap = "4.3"
# minimal library - remove the features we aren't using.
ureq = { version = "2.*", default-features = false }
regex = "1.5"
lazy_static = "1.4"
eyre = "0.6"
ctrlc = "3.2"

[dev-dependencies]
snapbox = "0.4"


[target.'cfg(windows)'.dependencies] 
winreg = "0.51"
windows = { version = "0.51", features = ["Win32_Foundation", "Win32_System_Console","Win32_System_Threading", "Win32_Security"]}

[package.metadata.deb]
depends = "libc6 (>= 2.12)"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/g-cli", dest = "/usr/bin/g-cli", mode = "755" }
]